# ICP

./: CMakeLists.txt
assets/: Branches.java  Fields.java  Fields.txt  Loop.txt
assets/CD/: Empty.cd  EmptyMethods.cd  FieldRef.cd  Fields.cd  Simple.cd
assets/examples/: Branches.txt  Fields.txt  Loop.java  Simple.java  Simple.txt  SimpleNew.java  SimpleNew.txt
assets/tests/SlowInterpreter/: dconst_dreturn.cd  get_put_static.cd  getfield_putfield.cd  goto.cd  iadd.cd  iconst_ireturn.cd  ifcmp.cd  iinc.cd  iload_istore.cd  new.cd
assets/tests/Verifier/: aload.cd  dconst_dreturn.cd  get_put_static.cd  goto.cd  if_icmp.cd  iinc.cd  iload_istore.cd  new.cd  putfield_getfield.cd  to_many_locals.cd
src/: main.cpp
src/Bytecode/: BciMap.h  Bytecode.cpp  Bytecode.h  BytecodeFwd.h  BytecodeInstructions.h  BytecodeInstructionsFwd.h  InstructionUtils.h  InstructionVisitor.cpp  InstructionVisitor.h  Instructions.h  Instructions.inc  InstructionsFwd.h
src/CD/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/ClassFileReader/: ClassFileReader.cpp  ClassFileReader.h
src/Interpreter/: Interpreter.cpp  Interpreter.h
src/JavaTypes/: Bytecode.cpp  Bytecode.h  BytecodeInstructions.h  BytecodeInstructionsFwd.h  ConstantPool.cpp  ConstantPool.h  ConstantPoolRecords.h  InstructionVisitor.cpp  InstructionVisitor.h  JavaClass.cpp  JavaClass.h  JavaField.cpp  JavaField.h  JavaMethod.cpp  JavaMethod.h  JavaTypesFwd.h  StackFrame.cpp  StackFrame.h  StackMapTable.cpp  StackMapTable.h  Type.cpp  Type.h
src/Runtime/: ClassManager.cpp  ClassManager.h  FieldStorage.cpp  FieldStorage.h  Objects.cpp  Objects.h  RuntimeFwd.h  Value.cpp  Value.h
src/SlowInterpreter/: Objects.cpp  Objects.h  SlowInterpreter.cpp  SlowInterpreter.h  Value.cpp  Value.h
src/Utils/: BinaryFiles.cpp  BinaryFiles.h  Iterators.h  Utf8String.h
src/Verifier/: Environment.cpp  Environment.h  StackFrame.cpp  StackFrame.h  Type.cpp  Type.h  Verifier.cpp  Verifier.h  VerifierFwd.h
tests/: tests_main.cpp
tests/Bytecode/: BciMapTests.cpp
tests/CD/: LexerTests.cpp  ParserTests.cpp
tests/ClassFileReader/: ClassFileReaderTests.cpp
tests/JavaTypes/: ConstantPoolTests.cpp  InstructionTests.cpp  InstructionVisitorTests.cpp  JavaFieldTests.cpp  JavaMethodTests.cpp  StackFrameTests.cpp  StackMapTableTests.cpp
tests/Runtime/: ClassManagerTests.cpp  ObjectsTests.cpp  ValueTests.cpp
tests/SlowInterpreter/: ObjectsTests.cpp  SlowInterpreterTests.cpp  ValueTests.cpp
tests/Utils/: IteratorsTests.cpp  TestUtils.cpp  TestUtils.h
tests/Verifier/: StackFrameTests.cpp  TypeTests.cpp  VerifierTests.cpp
